fazendo o chat de mensagens

--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,8 +1,8 @@
 development:
-  adapter: async
+  adapter: solid_cable
 
 test:
-  adapter: test
+  adapter: solid_cable
 
 production:
   adapter: redis
