--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,3 +4,7 @@ development:
 test:
   adapter: solid_cable
 
+production:
+  adapter: solid_cable
+  polling_interval: 0.1.seconds
+  message_retention: 1.day
